gtk+2.0 (2.14.4-3) experimental; urgency=low

  * libgail*.install: fix installation paths. Closes: #505105.
  * Do not ship .la files for gail modules.
  * Generate shlibs for libgail.
  * Bump shlibs version to 2.14.0.

 -- Josselin Mouette <joss@debian.org>  Tue, 11 Nov 2008 14:44:21 +0100

gtk+2.0 (2.14.4-2) experimental; urgency=low

  * debian/control, debian/rules, debian/libgail*:
  - split libgail packages

 -- Gustavo Noronha Silva <kov@debian.org>  Wed, 05 Nov 2008 14:54:08 -0200

gtk+2.0 (2.14.4-1) experimental; urgency=low

  [ Gustavo Noronha Silva ]
  * New upstream release
  * debian/patches/006_proper-directfb-modules.patch:
  - refreshed
  * debian/patches/008_implicit_pointer_conversion_gdkgc_directfb.patch,
    debian/patches/009_gtk-export-filechooser.patch,
    debian/patches/020_immodules-files-d.patch,
    debian/patches/021_loader-files-d.patch,
  - update borrowed from Ubuntu's package
  * debian/patches/071_correct_directfb_declarations.patch,
    debian/patches/072_workaround_directfb_build.patch:
  - borrowed from ubuntu
  * debian/patches/033_treeview_resizing.patch,
    debian/patches/095_gtk-im-module-setting.patch:
  - removed; fixed upstream
  * debian/patches/070_mandatory-relibtoolize.patch:
  - refreshed
  * debian/control.in:
  - added libjasper-dev to the Build-Depends, as GTK+ now supports
    JPEG2000
  - make GTK+ packages conflict/replace with gail ones, since they are now
    included in GTK+
  * debian/patches/092_fix_printtest_include.patch:
  - new patch, to fix build problem in print test
  * debian/patches/071_jasper_link_fix.patch:
  - make gdk-pixbuf-csource link correctly with libjasper
  * debian/rules, debian/control:
  - newer libcairo2-dev contains everything needed to build the directfb
    target, so disable building with the dummy libcairo-directfb2-dev
  - this makes us have to build depend on libcairo2-dev >= 1.6.4-6.1

  [ Loic Minier ]
  * Let libgtk2.0-dev recommend debhelper for dh_gtkmodules.