@@ -1,1 +1,1 @@
-debian/install/shared/@MODULES_BASE_PATH@/modules/*.so @MODULES_BASE_PATH@/modules
+debian/install/shared/@LIBDIR@/gtk-@APIVER@/modules/*.so @LIBDIR@/gtk-@APIVER@/modules
