@@ -1,1 +1,2 @@
+debian/install/shared/usr/share/gtk-doc/html/gail* usr/share/gtk-doc/html
 docs/reference/libgail-util/html usr/share/doc/libgail-doc/gail-libgail-util
