@@ -1,0 +1,1 @@
+/usr/share/gtk-doc/html/gail-libgail-util /usr/share/doc/libgail-doc/html
