@@ -1,3 +1,3 @@
 # from the directfb flavor
 debian/install/directfb/@MODULES_BASE_PATH@/loaders/libpixbufloader-png.so @MODULES_BASE_PATH@/loaders
-debian/install/directfb/@LIBDIR@/*.so.* @LIBDIR@
+debian/install/directfb/@LIBDIR@/libg?k*.so.* @LIBDIR@
