@@ -9,4 +9,5 @@ debian/install/shared/usr/bin/gtk-update-icon-cache @LIBDIR@/@SHARED_PKG@
 debian/install/shared/@MODULES_BASE_PATH@/loaders/*.so @MODULES_BASE_PATH@/loaders
 debian/install/shared/@MODULES_BASE_PATH@/immodules/*.so @MODULES_BASE_PATH@/immodules
 debian/install/shared/@MODULES_BASE_PATH@/printbackends/*.so @MODULES_BASE_PATH@/printbackends
-debian/install/shared/@LIBDIR@/*.so.* @LIBDIR@
+debian/install/shared/@LIBDIR@/libgtk*.so.* @LIBDIR@
+debian/install/shared/@LIBDIR@/libgdk*.so.* @LIBDIR@
