@@ -1,6 +1,8 @@
 usr/share/doc/@DOC_PKG@/gdk usr/share/gtk-doc/html/gdk
 usr/share/doc/@DOC_PKG@/gdk-pixbuf usr/share/gtk-doc/html/gdk-pixbuf
 usr/share/doc/@DOC_PKG@/gtk usr/share/gtk-doc/html/gtk
+usr/share/doc/@DOC_PKG@/faq usr/share/gtk-doc/html/gtk-faq
+usr/share/doc/@DOC_PKG@/tutorial usr/share/gtk-doc/html/gtk-tutorial
 usr/share/doc/libatk1.0-doc/atk usr/share/doc/@DOC_PKG@/atk
 usr/share/doc/libglib2.0-doc/glib usr/share/doc/@DOC_PKG@/glib
 usr/share/doc/libglib2.0-doc/gobject usr/share/doc/@DOC_PKG@/gobject
